# alphazero

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
alpha_zero/: cli.py
examples/: play_checkers.py  play_tic_tac_toe.py  run_training.py  train_checkers.py  train_tic_tac_toe.py
src/alpha_zero/: agent.py  config.py  parallel_trainer.py  replay_buffer.py  trainer.py  utils.py
src/alpha_zero/games/: abstract_game.py  checkers.py  tic_tac_toe.py
src/alpha_zero/mcts/: mcts.py  node.py
src/alpha_zero/networks/: base_net.py
