[tool.poetry]
name = "alpha_zero"
version = "0.1.0"
description = "AlphaZero training + play CLI and package"
authors = ["ayyoub jaichi ayyoubjaichi@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "alpha_zero", from= "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24.0"
tqdm = ">=4.66.0"
graphviz = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[tool.poetry.scripts]
# this exposes the CLI as `alpha_zero` after `poetry install`
alpha_zero = "alpha_zero.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
